--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,121 @@
 
 body {
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 0;
 
-font-family: "Roboto", Arial, sans-serif; 
-font-weight: 400;	
-font-size: 16px;
-line-height: 24px;
-color: #283136;
+	font-family: "Roboto", Arial, sans-serif; 
+	font-weight: 400;	
+	font-size: 16px;
+	line-height: 24px;
+	color: #283136;
 
-background-color: #ffffff;
+	background-color: #ffffff;
 }
 
 a {
-text-decoration: none;
+	text-decoration: none;
 }
 
 
 .main-navigation {
-background-color: #eeeeee;
-color: #000000;
-line-height: 30px;
-font-weight: 500;
-text-transform: uppercase;
+	color: #000000;
+	line-height: 30px;
+	font-weight: 500;
+	text-transform: uppercase;
+
+	background-color: #eeeeee;
+
 }
 
 .site-navigation,
 .user-navigation {
-list-style: none;
+	list-style: none;
 }
 
 .site-navigation a,
 .user-navigation a {
-color: #000000;
+	color: #000000;
 }
 
 .site-navigation a:hover,
 .site-navigation a:focus,
 .user-navigation a:hover,
 .user-navigation a:focus {
-color: #FB565A;
+	color: #FB565A;
 }
 
 .site-navigation a:active,
 .user-navigation a:active {
-color: rgba(0,0,0,0.3);
+	color: rgba(0,0,0,0.3);
 }
 
 .catalog-list {
-list-style: none;
+	list-style: none;
 }
 
 .catalog-item h3 {
-line-height: 30px;
-text-transform: uppercase;
-color: #000000;
-font-size: 24px;
+	line-height: 30px;
+	text-transform: uppercase;
+	color: #000000;
+	font-size: 24px;
 }
 
 .button {
-font: inherit;
-font-size: 16px;
-color: #ffffff;
-line-height: 18px;
-text-align: center;
-vertical-align: middle;
-
-text-transform: uppercase;
-border:none;
+	font: inherit;
+	font-size: 16px;
+	color: #ffffff;
+	line-height: 18px;
+	text-align: center;
+	text-transform: uppercase;
+	vertical-align: middle;
+	
+	border-radius: 5px;
+	border: none;
+	padding: 19px 40px;
 }
 
 .button-red {
-background-color: #FB565A;
-padding: 19px 40px 19px 40px;
+	background-color: #FB565A;
+	
 }
 .button-red:hover,
 .button-red:focus
 {
-background-color: #E74246;
+	background-color: #E74246;
 }
 
 .button-red:active {
-background-color: #D7373B;
-color: rgba(255,255,255,0.3);
+	background-color: #D7373B;
+	color: rgba(255,255,255,0.3);
 }
 
 .button-green {
-background-color: #00CA74;
-padding: 19px 40px 19px 40px;
-
+	background-color: #00CA74;
 }
 
 .button-green:hover,
 .button-green:focus {
-background-color: #00BC6C;
+	background-color: #00BC6C;
 }
 
 .button-green:active {
-background-color: #00AA62;
-color: rgba(255,255,255,0.3);
+	background-color: #00AA62;
+	color: rgba(255,255,255,0.3);
 }
 
 .button-yellow {
-background-color: #EFC84A;
-padding: 19px 40px 19px 40px;
+	background-color: #EFC84A;
 }
 
 .button-yellow:hover,
 .button-yellow:focus
  {
-background-color: #EAB534;
+	background-color: #EAB534;
 }
 
 .button-yellow:active {
-background-color: #E5A722;
-color: rgba(255,255,255,0.3);
+	background-color: #E5A722;
+	color: rgba(255,255,255,0.3);
 }
 
 .footer-social {
@@ -122,25 +123,24 @@ list-style: none;
 }
 
 .footer-h {
-font-size: 36px;
-font-weight: 700;
-line-height: 36px;
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 36px;
 }
 
 .footer-h p {
-color: #444444;
-font-size: 16px;
-font-weight: 400;
-line-height: 22px;
+	color: #444444;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 22px;
 }
 
 .page-title 
 {
-font-size: 55px;
-line-height: 55px;
-font-weight: 500;
-
-text-align: center;
+	font-size: 55px;
+	line-height: 55px;
+	font-weight: 500;
+	text-align: center;
 }
 
 .filter fieldset {
@@ -148,29 +148,30 @@ border: none;
 }
 
 .filter legend {
-font-size: 18px;
-line-height: 30px;
-font-weight: 700;
-text-transform: uppercase;
+	font-size: 18px;
+	line-height: 30px;
+	font-weight: 700;
+	text-transform: uppercase;
 }
 
 .filter ul {
-list-style: none;
-line-height: 20px;
+	list-style: none;
+	line-height: 20px;
 }
 input:hover + label,
 input:focus + label {
-color: #FB565A;
+	color: #FB565A;
 }
 
 input:disabled + label {
-color: rgba(40,49,54, 0.3);
+	color: rgba(40,49,54, 0.3);
 }
 
 
 .filter-button {
 	background-color: #EEEEEE;
-	padding: 20px 90px 20px 90px;
+	color: #000000;
+	padding: 20px 90px;
 	font-size: 16px;
 	line-height: 18px;
 
@@ -184,59 +185,64 @@ color: rgba(40,49,54, 0.3);
 }
 
 .filter-button:active {
-border-top: 3px solid #BFBFBF;
-background-color: #D5D5D5;
-color: rgba(0,0,0,0.3);
+	background-color: #D5D5D5;
+	color: rgba(0,0,0,0.3);
+
+	border-top: 3px solid #BFBFBF;
 } 
 
 .filter-button:hover,
 .filter-button:focus
  {
-font-size: 16px;
-line-height: 18px;
-background-color: #DFDFDF;
+	font-size: 16px;
+	line-height: 18px;
+
+	background-color: #DFDFDF;
 }
 
 .filter-button:active {
-color: rgba(0,0,0, 0.3);
-background-color: #D5D5D5;
+	color: rgba(0,0,0, 0.3);
+	background-color: #D5D5D5;
 }
 
 .feedback {
-display: none;
+	display: none;
 }
 
 .template-hover {
-background-color: #eeeeee;
-color: 666666;
-text-align: center;
-font-size: 16px;
-font-weight: 400;
-line-height: 18px;
+	color: 666666;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 18px;
+	text-align: center;
+
+	background-color: #eeeeee;
+
 }
 
 .template-hover h3 {
-color: #000000;
-font-weight: 700;
-font-size: 18;
-line-height: 30px;
-text-transform: uppercase;
+	color: #000000;
+	font-weight: 700;
+	font-size: 18;
+	line-height: 30px;
+	text-transform: uppercase;
 }
 
 .template-hover a {
-background-color: #FB565A;
-color: #ffffff;
-text-transform: uppercase;
+	background-color: #FB565A;
+	color: #ffffff;
+	text-transform: uppercase;
 
-padding: 19px 60px 19px 60px;
+	border-radius: 5px;
+	padding: 19px 60px;
 }
 
 .template-hover a:hover,
 .template-hover a:focus {
-background-color: #E74246;
+	background-color: #E74246;
 }
 
 .template-hover a:active {
-background-color: #D7373B;
-border-top: solid 3px #C13134;
+	background-color: #D7373B;
+	border-top: solid 3px #C13134;
 }
